--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ div#etiqueta1{
   <br>
   <br>
 
-  <div align="center"><img src="t.jpg" alt="aqui se supone va una imagen" width="550" height="200"></div>
+  <div align="center"><img src="t.JPG" alt="aqui se supone va una imagen" width="550" height="200"></div>
 
   <div id="etiqueta1">
 
