--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@ div#etiqueta1{
 
 
   <div id="etiqueta1">
+
+    <br>
     
-      <div align="center"><img src="t.JPG" alt="aqui se supone va una imagen" width="550" height="200"></div>
+   <h1 style="color:blue; font-size:300%; text-align:center;">Metodologia SCRUM</h1>
 
 <br>
 <br>
